// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video component should render with default videoPreviewIndex 1`] = `
<div>
  <div>
    <div
      class="preview"
    >
      <div>
        <div
          class="screenshotWrapper"
        >
          <div
            class="screenshot"
          >
            <img
              alt="video preview"
              src="https://img.youtube.com/vi/8fDF546/0.jpg"
            />
            <div
              class="playIcon"
            >
              <img
                alt="play"
                src="test-file-stub"
                width="11"
              />
            </div>
          </div>
        </div>
        <div
          class="title"
        >
          foo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video component should render with passed videoPreviewIndex 1`] = `
<div>
  <div>
    <div
      class="preview"
    >
      <div>
        <div
          class="screenshotWrapper"
        >
          <div
            class="screenshot"
          >
            <img
              alt="video preview"
              src="https://img.youtube.com/vi/8fDF546/2.jpg"
            />
            <div
              class="playIcon"
            >
              <img
                alt="play"
                src="test-file-stub"
                width="11"
              />
            </div>
          </div>
        </div>
        <div
          class="title"
        >
          foo
        </div>
      </div>
    </div>
  </div>
</div>
`;
